# API_TDD

./: .pre-commit-config.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
store/models/: base.py  product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
